Fjernet falske sitater og la til alt-tekst på alle programfagene frem til rettslære(alfabetisk)

--- a/programfag/arkitektur_og_samfunn/index.html
+++ b/programfag/arkitektur_og_samfunn/index.html
@@ -70,8 +70,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/arkitektur_og_samfunn/digital-skisse.jpg" alt="Placeholder">
-                    <img src="../../assets/imgs/arkitektur_og_samfunn/traer-i-by.jpg" alt="Placeholder">
+                    <img src="../../assets/imgs/arkitektur_og_samfunn/digital-skisse.jpg" alt="Digital skisse">
+                    <img src="../../assets/imgs/arkitektur_og_samfunn/traer-i-by.jpg" alt="Trær i by">
                 </div>
                 <div class="elev-sitat">
                 </div>
@@ -82,7 +82,6 @@
                 </div>
                 <!-- legg til interaktivt element her -->
                 <div class="divider-element">
-
                 </div>
             </div>
         </div>
