--- a/programfag/design_og_bærekraft/index.html
+++ b/programfag/design_og_bærekraft/index.html
@@ -73,8 +73,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/design_og_bærekraft/fargepaletter.jpg" alt="Placeholder">
-                    <img src="../../assets/imgs/design_og_bærekraft/liming-design.jpg" alt="Placeholder">
+                    <img src="../../assets/imgs/design_og_bærekraft/fargepaletter.jpg" alt="Fargepaletter">
+                    <img src="../../assets/imgs/design_og_bærekraft/liming-design.jpg" alt="Liming design">
                 </div>
                 <div class="elev-sitat">
                 </div>
