--- a/programfag/engelsk/index.html
+++ b/programfag/engelsk/index.html
@@ -125,19 +125,10 @@ Du får en karakter i skriftlig og en karakter i muntlig. Det er som regel en mu
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/engelsk/buckinham.png" alt="">
-                    <img src="../../assets/imgs/engelsk/fone.png" alt="">
+                    <img src="../../assets/imgs/engelsk/buckinham.png" alt="buckingham palace">
+                    <img src="../../assets/imgs/engelsk/fone.png" alt="telefonkiosk">
                 </div>
                 <div class="elev-sitat">
-                    <h3>Hva mener elevene?</h3>
-                    <p>
-                        <i>
-                            ""
-                        </i>
-                    </p>
-                    <p>
-                        - Tidligere elev
-                    </p>
                 </div>
                 <div class="mer-informasjon">
                     <h3>Aktuelle lenker</h3>
@@ -145,18 +136,8 @@ Du får en karakter i skriftlig og en karakter i muntlig. Det er som regel en mu
                     <li><a href="https://www.udir.no/lk20/eng04-02/" target="_blank">Læreplan</a></li>
                 </div>
                 <div class="divider-element">
-
-                </div>
-                <div class="interaktivt-element">
-
                 </div>
             </div>
-        </div>
-        <!-- bølgete linje -->
-        <div class="skillelinje" id="bølge"></div>
-        <!-- legg til flere prosjekter her -->
-        <div class="flere-prosjekter">
-            <h3>Flere prosjekter</h3>
         </div>
     </main>
     <!-- Footer -->
