--- a/programfag/entreprenørskap/index.html
+++ b/programfag/entreprenørskap/index.html
@@ -127,18 +127,9 @@ konkurranser.
                 </div>
                 <div class="avlangt-visuelt-element">
                     <img src="../../assets/imgs/entreprenørskap/forretningsmodell.png" alt="Entreprenørskap forettningsmodell.">
-                    <img src="../../assets/imgs/entreprenørskap/ue.png" alt="Person som driver med kjemi">
+                    <img src="../../assets/imgs/entreprenørskap/ue.png" alt="Ungt entreprenørskap">
                 </div>
                 <div class="elev-sitat">
-                    <h3>Hva mener elevene?</h3>
-                    <p>
-                        <i>
-                            ""
-                        </i>
-                    </p>
-                    <p>
-                        - Tidligere elev
-                    </p>
                 </div>
                 <div class="mer-informasjon">
                     <h3>Aktuelle lenker</h3>
