--- a/programfag/foto_og_grafikk/index.html
+++ b/programfag/foto_og_grafikk/index.html
@@ -69,8 +69,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/foto_og_grafikk/tre-x-menneske.jpg" alt="Placeholder">
-                    <img src="../../assets/imgs/foto_og_grafikk/deprimerende-bursdag.jpg" alt="Placeholder">
+                    <img src="../../assets/imgs/foto_og_grafikk/tre-x-menneske.jpg" alt="tegnet gutt i rødt og svart med tre x-er under">
+                    <img src="../../assets/imgs/foto_og_grafikk/deprimerende-bursdag.jpg" alt="Deprimert jente bak kake med ett lys">
                 </div>
                 <div class="elev-sitat">
                 </div>
