--- a/programfag/friluftsliv/index.html
+++ b/programfag/friluftsliv/index.html
@@ -58,19 +58,10 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/friluftsliv/telt.png" alt="Placeholder fysikk">
-                    <img src="../../assets/imgs/friluftsliv/hav.png" alt="Placeholder fysikk">
+                    <img src="../../assets/imgs/friluftsliv/telt.png" alt="Telt">
+                    <img src="../../assets/imgs/friluftsliv/hav.png" alt="Bading i havet">
                 </div>
                 <div class="elev-sitat">
-                    <h3>Hva mener elevene?</h3>
-                    <p>
-                        <i>
-                            ""
-                        </i>
-                    </p>
-                    <p>
-                        - Elev
-                    </p>
                 </div>
                 <div class="mer-informasjon">
                     <h3>Aktuelle lenker</h3>
@@ -79,9 +70,6 @@
                 </div>
                 <!-- legg til interaktivt element her -->
                 <div class="divider-element">
-
-                </div>
-                <div class="interaktivt-element">
                 </div>
             </div>
         </div>
