--- a/programfag/fysikk/index.html
+++ b/programfag/fysikk/index.html
@@ -83,20 +83,10 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/fysikk/pendel.png" alt="Placeholder fysikk">
-                    <img src="../../assets/imgs/fysikk/lyspaere.png" alt="Placeholder fysikk">
+                    <img src="../../assets/imgs/fysikk/pendel.png" alt="Pendel">
+                    <img src="../../assets/imgs/fysikk/lyspaere.png" alt="Lyspære">
                 </div>
                 <div class="elev-sitat">
-                    <h3>Hva mener elevene?</h3>
-                    <p>
-                        <i>
-                            "Du kan jo spørre noen andre, da. Ooog jeg ville ikke brukt det derre,
-                            for det er ikke et ordentlig sitat. Vi prøver å være profesjonelle, Sondre"
-                        </i>
-                    </p>
-                    <p>
-                        - Nåverende elev
-                    </p>
                 </div>
                 <div class="mer-informasjon">
                     <h3>Aktuelle lenker</h3>
@@ -156,20 +146,10 @@
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/fysikk/elektromagnetisme.png" alt="placeholder fysikk">
-                    <img src="../../assets/imgs/fysikk/kvantefysikk.png" alt="Placeholder fysikk">
+                    <img src="../../assets/imgs/fysikk/elektromagnetisme.png" alt="Elektromagnetisme illustrasjon">
+                    <img src="../../assets/imgs/fysikk/kvantefysikk.png" alt="Insiden av en partikkelakselerator">
                 </div>
                 <div class="elev-sitat">
-                    <h3>Hva mener elevene?</h3>
-                    <p>
-                        <i>
-                            "Du kan jo spørre noen andre, da. Ooog jeg ville ikke brukt det derre,
-                            for det er ikke et ordentlig sitat. Vi prøver å være profesjonelle, Sondre"
-                        </i>
-                    </p>
-                    <p>
-                        - Fremtidig elev
-                    </p>
                 </div>
                 <div class="mer-informasjon">
                     <h3>Aktuelle lenker</h3>
@@ -183,12 +163,6 @@
                     <iframe src="../../widgets/pendel/index.html" id="pendel"></iframe>
                 </div>
             </div>
-        </div>
-        <!-- bølgete linje -->
-        <div class="skillelinje" id="bølge"></div>
-        <!-- legg til flere prosjekter her -->
-        <div class="flere-prosjekter">
-            <h3>Flere prosjekter</h3>
         </div>
     </main>
     <!-- Footer -->
