--- a/programfag/geofag/index.html
+++ b/programfag/geofag/index.html
@@ -65,19 +65,10 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/geofag/isbjørn.png" alt="Person som driver med kjemi">
-                    <img src="../../assets/imgs/geofag/vulkan.png" alt="Person som driver med kjemi">
+                    <img src="../../assets/imgs/geofag/isbjørn.png" alt="Isbjørn">
+                    <img src="../../assets/imgs/geofag/vulkan.png" alt="Vulkan">
                 </div>
                 <div class="elev-sitat">
-                    <h3>Hva mener elevene?</h3>
-                    <p>
-                        <i>
-                            ""
-                        </i>
-                    </p>
-                    <p>
-                        - Tidligere elev
-                    </p>
                 </div>
                 <div class="mer-informasjon">
                     <h3>Aktuelle lenker</h3>
@@ -126,19 +117,10 @@
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/geofag/tørke.png" alt="Person som driver med kjemi">
-                    <img src="../../assets/imgs/geofag/lyn.png" alt="Person som driver med kjemi">
+                    <img src="../../assets/imgs/geofag/tørke.png" alt="Tørke">
+                    <img src="../../assets/imgs/geofag/lyn.png" alt="Storm">
                 </div>
                 <div class="elev-sitat">
-                    <h3>Hva mener elevene?</h3>
-                    <p>
-                        <i>
-                            ""
-                        </i>
-                    </p>
-                    <p>
-                        - Tidligere elev
-                    </p>
                 </div>
                 <div class="mer-informasjon">
                     <h3>Aktuelle lenker</h3>
