--- a/programfag/informasjonsteknologi/index.html
+++ b/programfag/informasjonsteknologi/index.html
@@ -77,8 +77,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/informasjonsteknologi/rosa_ikon.png" alt="TODO">
-                    <img src="../../assets/imgs/informasjonsteknologi/datamaskin.png" alt="TODO">
+                    <img src="../../assets/imgs/informasjonsteknologi/rosa_ikon.png" alt="Rosa ikon teknologi">
+                    <img src="../../assets/imgs/informasjonsteknologi/datamaskin.png" alt="Elektronikk datamaskin">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -155,8 +155,8 @@
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/informasjonsteknologi/enda_mer_kode.png" alt="TODO">
-                    <img src="../../assets/imgs/informasjonsteknologi/sofagruppa.jpg" alt="TODO">
+                    <img src="../../assets/imgs/informasjonsteknologi/enda_mer_kode.png" alt="Kode">
+                    <img src="../../assets/imgs/informasjonsteknologi/sofagruppa.jpg" alt="Folk som samargeider i en sofa">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
