--- a/programfag/kunst_og_skapende_arbeid/index.html
+++ b/programfag/kunst_og_skapende_arbeid/index.html
@@ -71,8 +71,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/kunst_og_skapende/cafe-maleri.jpg" alt="Placeholder">
-                    <img src="../../assets/imgs/kunst_og_skapende/maleri-bold-jente.jpg" alt="Placeholder">
+                    <img src="../../assets/imgs/kunst_og_skapende/cafe-maleri.jpg" alt="Maleri av folk i cafe">
+                    <img src="../../assets/imgs/kunst_og_skapende/maleri-bold-jente.jpg" alt="Maleri av en blond jente">
                 </div>
                 <div class="elev-sitat">
                 </div>
