--- a/programfag/markedsføring_og_ledelse/index.html
+++ b/programfag/markedsføring_og_ledelse/index.html
@@ -71,19 +71,10 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/markedsføring/hode.png" alt="Placeholder">
-                    <img src="../../assets/imgs/markedsføring/sirkler.png" alt="PLaceholder">                    
+                    <img src="../../assets/imgs/markedsføring/hode.png" alt="Illustrasjon hode med ideer">
+                    <img src="../../assets/imgs/markedsføring/sirkler.png" alt="Markedsføringsideer på whiteboard">                    
                 </div>
                 <div class="elev-sitat">
-                    <h3>Hva mener elevene?</h3>
-                    <p>
-                        <i>
-                            ""
-                        </i>
-                    </p>
-                    <p>
-                        - Tidligere elev
-                    </p>
                 </div>
                 <div class="mer-informasjon">
                     <h3>Aktuelle lenker</h3>
@@ -92,9 +83,6 @@
                 </div>
                 <!-- legg til interaktivt element her -->
                 <div class="divider-element">
-
-                </div>
-                <div class="interaktivt-element">
 
                 </div>
             </div>
