--- a/programfag/r_matte/index.html
+++ b/programfag/r_matte/index.html
@@ -95,8 +95,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/matte_r/mer_matte.png" alt="Placeholder R-matte">
-                    <img src="../../assets/imgs/matte_r/numerisk.png" alt="Placeholder R-matte" id="bilde2">
+                    <img src="../../assets/imgs/matte_r/mer_matte.png" alt="Grafer i geogebra">
+                    <img src="../../assets/imgs/matte_r/numerisk.png" alt="Halveringsmetoden i python" id="bilde2">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -183,8 +183,8 @@
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/matte_r/geogebra_spiral.png" alt="Placeholder R-matte">
-                    <img src="../../assets/imgs/matte_r/matte_på_spansk.png" alt="Placeholder R-matte">
+                    <img src="../../assets/imgs/matte_r/geogebra_spiral.png" alt="Spiral geogebra">
+                    <img src="../../assets/imgs/matte_r/matte_på_spansk.png" alt="matte i mattebok">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -209,12 +209,6 @@
                     <iframe src="../../widgets/r2_quiz/index.html" width="510" height="570" style="border: none;"></iframe>
                 </div>
             </div>
-        </div>
-        <!-- bølgete linje -->
-        <div class="skillelinje" id="bølge"></div>
-        <!-- legg til flere prosjekter her -->
-        <div class="flere-prosjekter">
-            <h3>Flere prosjekter</h3>
         </div>
     </main>
     <!-- Footer -->
