--- a/programfag/hifi/index.html
+++ b/programfag/hifi/index.html
@@ -67,8 +67,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/hifi/bøker.png" alt="PLaceholder">
-                    <img src="../../assets/imgs/hifi/kamera.png" alt="Placeholder">
+                    <img src="../../assets/imgs/hifi/bøker.png" alt="Bøker">
+                    <img src="../../assets/imgs/hifi/kamera.png" alt="Kamera">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
