--- a/programfag/kjemi/index.html
+++ b/programfag/kjemi/index.html
@@ -90,8 +90,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/kjemi/dude_med_dråpeteller.jpg" alt="Person som driver med kjemi">
-                    <img src="../../assets/imgs/kjemi/periodesystem_brikker.png" alt="Person som driver med kjemi">
+                    <img src="../../assets/imgs/kjemi/dude_med_dråpeteller.jpg" alt="Person med dråpeteller">
+                    <img src="../../assets/imgs/kjemi/periodesystem_brikker.png" alt="Brikker av periodesystemet">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -175,8 +175,8 @@
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/kjemi/atomikon_rød.png" alt="Person som driver med kjemi">
-                    <img src="../../assets/imgs/kjemi/kjemiting.jpg" alt="Person som driver med kjemi">
+                    <img src="../../assets/imgs/kjemi/atomikon_rød.png" alt="Rødt atomikon">
+                    <img src="../../assets/imgs/kjemi/kjemiting.jpg" alt="Folk som driver med kjemi">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
