--- a/programfag/rettslære/index.html
+++ b/programfag/rettslære/index.html
@@ -83,6 +83,58 @@
                 </div>
             </div>
         </div>
+        <!-- bølgete linje -->
+        <div class="skillelinje"></div>
+        <div id="fagnummer2" class="fag-informasjon">
+            <h2>Rettslære 2</h2>
+            <div class="informasjonsbokser">
+                <div class="rask-oversikt">
+                    <h3>Rask oversikt</h3>
+                    <li>Eksamensform: <b>Skriftlig eller muntlig</b></li>
+                    <li>Bygger på andre fag: <b>Ja, rettslære 1</b></li>
+                </div>
+                <div class="sentrale-temaer">
+                    <h3>Sentrale temaer</h3>
+                    <ul>
+                        <li>Forstå og anvende den juridiske metoden</li>
+                        <li>Dagsaktuelle problemstillinger</li>
+                        <li>Miljø</li>
+                        <li>Personvern</li>
+                        <li>Problemstillinger ved informasjons- og kommunikasjonsteknologi</li>
+                        <li>Forholdet mellom individ og offentlig forvaltning</li>
+                        <li>Erstattningsrett</li>
+                        <li>Strafferett</li>
+                        <li>Drøfting</li>
+                        <li>Begrunne argumenter</li>
+                    </ul>
+                </div>
+                <div class="visuelt-element">
+
+                </div>
+                <div class="hvordan-jobber-vi">
+                    <h3>Hvordan jobber vi?</h3>
+                    <p>
+                        Faget er i stor grad et praktisk fag. Vi jobber med konkrete problemstillinger hvor du skal lære å anvende reglene for å løse rettslige spørsmål. Det er lite pugging. Vi drar på ekskursjon til domstolene for å blant annet overvære en straffesak.
+                    </p>
+                    <p>
+                        Eksempler på spørsmål som blir diskutert er: "Er muntlige avtaler bindende?", "Hvordan skal formuen deles ved skilsmisse?", "Hva kan du ha krav på om mobiltelefonen din slutter å virke?" og "Kan barn gjøres arveløse?".
+                    </p>
+                </div>
+                <div class="avlangt-visuelt-element">
+                    <img src="../../assets/imgs/rettslære/dommer.png" alt="Dommer">
+                    <img src="../../assets/imgs/rettslære/paragraf-og-dommer-hammer.png" alt="Paragraf og dommer-hammer">
+                </div>
+                <div class="elev-sitat">
+                </div>
+                <div class="mer-informasjon">
+                    <h3>Aktuelle lenker</h3>
+                    <li><a href="https://snl.no/rettslære" target="_blank">Les mer på SNL</a></li>
+                    <li><a href="https://www.udir.no/lk20/rtl01-04" target="_blank">Læreplan</a></li>
+                </div>
+                <div class="divider-element">
+                </div>
+            </div>
+        </div>
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
