Fikset alt-tekst og fjernet falske/tomme sitat fra resten av programfagene
Endelig ferdig :D

--- a/programfag/sosiologi_og_sosialantropologi/index.html
+++ b/programfag/sosiologi_og_sosialantropologi/index.html
@@ -111,8 +111,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/sosiologi_og_sosialantropologi/Barn_holder_hender_ikon.png" alt="Placeholder">
-                    <img src="../../assets/imgs/sosiologi_og_sosialantropologi/trist_mann.png" alt="Placeholder">
+                    <img src="../../assets/imgs/sosiologi_og_sosialantropologi/Barn_holder_hender_ikon.png" alt="Tegning barm som holder hender">
+                    <img src="../../assets/imgs/sosiologi_og_sosialantropologi/trist_mann.png" alt="Trist mann">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hvorfor velge sosiologi & sosialantropologi?</h3>
