--- a/programfag/tekforsk/index.html
+++ b/programfag/tekforsk/index.html
@@ -69,8 +69,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/teknologi_og_forskningslære/gifs/rakett.gif" alt="TODO">
-                    <img src="../../assets/imgs/teknologi_og_forskningslære/bro.png" alt="TODO">
+                    <img src="../../assets/imgs/teknologi_og_forskningslære/gifs/rakett.gif" alt="Modellrakett som skytes opp">
+                    <img src="../../assets/imgs/teknologi_og_forskningslære/bro.png" alt="Bro med vekt">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -131,8 +131,8 @@
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/teknologi_og_forskningslære/flyvende_cola.jpg" alt="TODO">
-                    <img src="../../assets/imgs/teknologi_og_forskningslære/ting.jpg" alt="TODO">
+                    <img src="../../assets/imgs/teknologi_og_forskningslære/flyvende_cola.jpg" alt="Cola-boks i fallskjerm">
+                    <img src="../../assets/imgs/teknologi_og_forskningslære/ting.jpg" alt="Teknologi">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -157,12 +157,6 @@
                     <iframe src="../../widgets/tekforsk_quiz/index.html" width="510" height="570" style="border: none;"></iframe>
                 </div>
             </div>
-        </div>
-        <!-- bølgete linje -->
-        <div class="skillelinje" id="bølge"></div>
-        <!-- legg til flere prosjekter her -->
-        <div class="flere-prosjekter">
-            <h3>Flere prosjekter</h3>
         </div>
     </main>
     <!-- Footer -->
