--- a/programfag/s_matte/index.html
+++ b/programfag/s_matte/index.html
@@ -83,8 +83,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/matte_s/grafer.png" alt="Placeholder S-matte">
-                    <img src="../../assets/imgs/matte_s/terninger.png" alt="Placeholder S-matte">
+                    <img src="../../assets/imgs/matte_s/grafer.png" alt="Grafer">
+                    <img src="../../assets/imgs/matte_s/terninger.png" alt="Terninger">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -155,8 +155,8 @@
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/matte_s/statistikk.png" alt="Placeholder S-matte">
-                    <img src="../../assets/imgs/matte_s/derivasjon.png" alt="Placeholder S-matte">
+                    <img src="../../assets/imgs/matte_s/statistikk.png" alt="Statistikk">
+                    <img src="../../assets/imgs/matte_s/derivasjon.png" alt="Derivasjon">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -184,12 +184,6 @@
                     <iframe src="../../widgets/s2_quiz/index.html" width="510" height="570" style="border: none;"></iframe>
                 </div>
             </div>
-        </div>
-        <!-- bølgete linje -->
-        <div class="skillelinje" id="bølge"></div>
-        <!-- legg til flere prosjekter her -->
-        <div class="flere-prosjekter">
-            <h3>Flere prosjekter</h3>
         </div>
     </main>
     <!-- Footer -->
