Begynt på e-sport og fikset noen småting
Fjernet et komma og endret lenke-farge på IT-side

--- a/idrettsfag/index.html
+++ b/idrettsfag/index.html
@@ -52,7 +52,7 @@
                     <p>Breddeidrett</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/" class="fag_i_meny">
+                <a href="../programfag/esport/" class="fag_i_meny">
                     <img src="../assets/imgs/e-sport/gutt-som-gamer.png" alt="Gutt som gamer" class="fagmeny_bilde">
                     <p>E-sport</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
@@ -88,9 +88,9 @@
                 <img src="../assets/imgs/e-sport/gutt-som-gamer.png" class="fag-bilde">
                 <div class="fag-info">
                     <h3 class="fag-tittel">E-sport</h3>
-                    <p class="fag-beskrivelse"></p>
+                    <p class="fag-beskrivelse">Toppidrett esport er et fag som kombinerer tradisjonell idrett med esport. Elever som tar faget får trene på ferdigheter innenfor et spill, samtidig som de lærer om strategi, kommunikasjon, samspill og helse.</p>
                     <p class="fag-sitat"></p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="../programfag/esport/">Se mer →</a>
                 </div>
             </div>
         </div>
