--- a/programfag/breddeidrett/index.html
+++ b/programfag/breddeidrett/index.html
@@ -22,7 +22,7 @@
         <!-- kort informerende tekst om programfaget -->
         <div id="intro-tekst">
             <p>
-                Med breddeidrett lærer du deg flere individuelle idretter og lagidretter, fair play, og samarbeid.
+                Med breddeidrett lærer du deg flere individuelle idretter og lagidretter, fair play og samarbeid.
             </p>
         </div>
         <!-- bølgete linje -->
