--- a/idrettsfag/programfag/breddeidrett/index.html
+++ b/idrettsfag/programfag/breddeidrett/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../style/global.css">
-    <link rel="stylesheet" href="../../style/programfag.css">
+    <link rel="stylesheet" href="../../../style/global.css">
+    <link rel="stylesheet" href="../../../style/programfag.css">
     <link rel="stylesheet" href="./breddeidrett.css">
-    <link rel="icon" href="../../assets/icons/favicon.png" type="image/png">
+    <link rel="icon" href="../../../assets/icons/favicon.png" type="image/png">
     <title>Breddeidrett</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
         <div id="forside-bilde">
             <h1>Breddeidrett</h1>
             <!-- knapp tilbake til idrettsfagsiden -->
-            <a href="../../idrettsfag/" id="tilbake-knapp">&lt; Tilbake til idrettsfag</a>
+            <a href="../../../idrettsfag" id="tilbake-knapp">&lt; Tilbake til idrettsfag</a>
         </div>
     </header>
     <main>
@@ -66,24 +66,24 @@
                 <div class="hvordan-jobber-vi">
                     <h3>Hvordan jobber vi?</h3>
                     <p>
-                        Breddeidrett blir brukt om idrett der aktiviteten er selve målet. Mange mennesker liker 
-                        å trene, og de ser hvor viktig det er å ha en sterk og utholdende kropp som tåler stor 
-                        belastning i jobb og på fritida.  I dette faget skal du få prøve ut mange forskjellige 
-                        idretter og aktiviteter og lære deg treningsprinsipper om hvordan du kan opprettholde 
-                        en sunn og aktiv livsstil. Her får du også mulighet til å øve på ferdigheter, slik at 
+                        Breddeidrett blir brukt om idrett der aktiviteten er selve målet. Mange mennesker liker
+                        å trene, og de ser hvor viktig det er å ha en sterk og utholdende kropp som tåler stor
+                        belastning i jobb og på fritida.  I dette faget skal du få prøve ut mange forskjellige
+                        idretter og aktiviteter og lære deg treningsprinsipper om hvordan du kan opprettholde
+                        en sunn og aktiv livsstil. Her får du også mulighet til å øve på ferdigheter, slik at
                         man mestrer selve idretten.
                     </p>
                     <p>
-                        God helse oppnår du gjennom bevisst og systematisk treningsarbeid, både fysisk og 
-                        psykisk. Det er ikke hvor mange kilo du løfter, som er viktig, det er opplevelsen av å 
-                        kjenne kroppen fungere, vite hvorfor kroppen fungerer, føle at du orker mer, selv om du 
+                        God helse oppnår du gjennom bevisst og systematisk treningsarbeid, både fysisk og
+                        psykisk. Det er ikke hvor mange kilo du løfter, som er viktig, det er opplevelsen av å
+                        kjenne kroppen fungere, vite hvorfor kroppen fungerer, føle at du orker mer, selv om du
                         har jogget opp en lang motbakke.
                     </p>
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/breddeidrett/basketball.png" alt="basketball">
-                    <img src="../../assets/imgs/breddeidrett/yoga_matter.png" alt="yoga-matter" id="bilde2">
+                    <img src="../../../assets/imgs/breddeidrett/basketball.png" alt="basketball">
+                    <img src="../../../assets/imgs/breddeidrett/yoga_matter.png" alt="yoga-matter" id="bilde2">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -110,8 +110,8 @@
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="../../script/footer.js"></script>
-    <script src="../../script/global.js"></script>
-    <script src="../../script/biologi.js"></script>
+    <script src="../../../script/footer.js"></script>
+    <script src="../../../script/global.js"></script>
+    <script src="../../../script/biologi.js"></script>
 </body>
 </html>
