--- a/idrettsfag/programfag/esport/index.html
+++ b/idrettsfag/programfag/esport/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../style/global.css">
-    <link rel="stylesheet" href="../../style/programfag.css">
+    <link rel="stylesheet" href="../../../style/global.css">
+    <link rel="stylesheet" href="../../../style/programfag.css">
     <link rel="stylesheet" href="./esport.css">
-    <link rel="icon" href="../../assets/icons/favicon.png" type="image/png">
+    <link rel="icon" href="../../../assets/icons/favicon.png" type="image/png">
     <title>E-sport</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
         <div id="forside-bilde">
             <h1>E-sport</h1>
             <!-- knapp tilbake til idrettsfagssiden -->
-            <a href="../../idrettsfag/" id="tilbake-knapp">&lt; Tilbake til idrettsfag</a>
+            <a href="../../../idrettsfag" id="tilbake-knapp">&lt; Tilbake til idrettsfag</a>
         </div>
     </header>
     <main>
@@ -40,7 +40,7 @@
                     <h3>Dette lærer du</h3>
                     <p>
                         Toppidrett esport er et fag som kombinerer tradisjonell idrett med esport. Elever som tar faget får trene på ferdigheter innenfor et spill, samtidig som de lærer om strategi, kommunikasjon, samspill og helse. Hvilke spill som tilbys varierer litt fra år til år, men du kan søke deg til spill som CS2, Valorant, League of Legends, iRacing og EAFC25. Vi håper å få til konkurranser mot andre aktører for å simulere hvordan en profesjonell esport-utøver har det.
-                    </p>   
+                    </p>
                 </div>
                 <div class="visuelt-element">
 
@@ -49,8 +49,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/friluftsliv/telt.png" alt="Telt">
-                    <img src="../../assets/imgs/friluftsliv/hav.png" alt="Bading i havet">
+                    <img src="../../../assets/imgs/friluftsliv/telt.png" alt="Telt">
+                    <img src="../../../assets/imgs/friluftsliv/hav.png" alt="Bading i havet">
                 </div>
                 <div class="elev-sitat">
                 </div>
@@ -67,7 +67,7 @@
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="../../script/footer.js"></script>
-    <script src="../../script/global.js"></script>
+    <script src="../../../script/footer.js"></script>
+    <script src="../../../script/global.js"></script>
 </body>
 </html>
