--- a/idrettsfag/programfag/friluftsliv/index.html
+++ b/idrettsfag/programfag/friluftsliv/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../style/global.css">
-    <link rel="stylesheet" href="../../style/programfag.css">
+    <link rel="stylesheet" href="../../../style/global.css">
+    <link rel="stylesheet" href="../../../style/programfag.css">
     <link rel="stylesheet" href="./friluftsliv.css">
-    <link rel="icon" href="../../assets/icons/favicon.png" type="image/png">
+    <link rel="icon" href="../../../assets/icons/favicon.png" type="image/png">
     <title>Friluftsliv</title>
 </head>
 <body>
@@ -15,14 +15,14 @@
         <div id="forside-bilde">
             <h1>Friluftsliv</h1>
             <!-- knapp tilbake til idrettsfagssiden -->
-            <a href="../../idrettsfag/" id="tilbake-knapp">&lt; Tilbake til idrettsfag</a>
+            <a href="../../../idrettsfag" id="tilbake-knapp">&lt; Tilbake til idrettsfag</a>
         </div>
     </header>
     <main>
         <!-- kort informerende tekst om programfaget -->
         <div id="intro-tekst">
             <p>
-                Friluftsliv handler om å gi deg erfaringer knyttet til turer og aktiviteter i naturen til ulike årstider. Samarbeid, innsats og fellesskap står sentralt i faget, sammen med det å flytte egne grenser og oppleve mestring gjennom opplevelser i naturen. Ved å utøve ulike former for friluftsliv kan du få praktiske erfaringer som kan fremme engasjement for og innsikt i friluftslivets potensielle betydning for god helse og livskvalitet.  
+                Friluftsliv handler om å gi deg erfaringer knyttet til turer og aktiviteter i naturen til ulike årstider. Samarbeid, innsats og fellesskap står sentralt i faget, sammen med det å flytte egne grenser og oppleve mestring gjennom opplevelser i naturen. Ved å utøve ulike former for friluftsliv kan du få praktiske erfaringer som kan fremme engasjement for og innsikt i friluftslivets potensielle betydning for god helse og livskvalitet.
             </p>
         </div>
         <!-- bølgete linje -->
@@ -53,13 +53,13 @@
                 </div>
                 <div class="hvordan-jobber-vi">
                     <p>
-                        Friluftsliv på Elvebakken skal være et fag for alle, uavhengig av hvor mye erfaring du har med friluftsliv tidligere eller hvor mye utstyr du har. Bærekraft og gjenbruk står sentralt i vårt syn på faget, og hva som bidrar til å gi gode naturopplevelser. Her er alle velkommen! 
+                        Friluftsliv på Elvebakken skal være et fag for alle, uavhengig av hvor mye erfaring du har med friluftsliv tidligere eller hvor mye utstyr du har. Bærekraft og gjenbruk står sentralt i vårt syn på faget, og hva som bidrar til å gi gode naturopplevelser. Her er alle velkommen!
                     </p>
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/friluftsliv/telt.png" alt="Telt">
-                    <img src="../../assets/imgs/friluftsliv/hav.png" alt="Bading i havet">
+                    <img src="../../../assets/imgs/friluftsliv/telt.png" alt="Telt">
+                    <img src="../../../assets/imgs/friluftsliv/hav.png" alt="Bading i havet">
                 </div>
                 <div class="elev-sitat">
                 </div>
@@ -76,7 +76,7 @@
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="../../script/footer.js"></script>
-    <script src="../../script/global.js"></script>
+    <script src="../../../script/footer.js"></script>
+    <script src="../../../script/global.js"></script>
 </body>
 </html>
