--- a/kda/index.html
+++ b/kda/index.html
@@ -42,22 +42,22 @@
 
             <div id="fag_meny">
                 <!-- om antall fag endres, må også css endres (grid_template_columns) -->
-                <a href="../programfag/kunst_og_skapende_arbeid/" class="fag_i_meny">
+                <a href="../kda/programfag/kunst_og_skapende_arbeid/" class="fag_i_meny">
                     <img src="../assets/imgs/kunst_og_skapende/skjelett.png" alt="Skjelett kunst" class="fagmeny_bilde">
                     <p>Kunst og skapende arbeid</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/foto_og_grafikk/" class="fag_i_meny">
+                <a href="../kda/programfag/foto_og_grafikk/" class="fag_i_meny">
                     <img src="../assets/imgs/foto_og_grafikk/tre_ansikt_kunst.jpg" alt="Laserkuttet hus" class="fagmeny_bilde">
                     <p>Foto og grafikk</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/arkitektur_og_samfunn/" class="fag_i_meny">
+                <a href="../kda/programfag/arkitektur_og_samfunn/" class="fag_i_meny">
                     <img src="../assets/imgs/arkitektur_og_samfunn/digital-skisse.jpg" alt="digital skisse" class="fagmeny_bilde">
                     <p>Arkitektur og samfunn</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/design_og_bærekraft/" class="fag_i_meny">
+                <a href="../kda/programfag/design_og_bærekraft/" class="fag_i_meny">
                     <img src="../assets/imgs/design_og_bærekraft/redesign_bukser_og_vesker.jpg" alt="redesign bukser og vesker" class="fagmeny_bilde">
                     <p>Design og bærekraft</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
@@ -77,7 +77,7 @@
                     <h3 class="fag-tittel">Kunst og skapende</h3>
                     <p class="fag-beskrivelse">I Kunst og skapende lærer man mye nyttig om kunst, både hvordan man lager det, og hvorfor det er viktig</p>
                     <p class="fag-sitat"></p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/kunst_og_skapende_arbeid/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="../kda/programfag/kunst_og_skapende_arbeid/">Se mer →</a>
                 </div>
             </div>
             <div class="fag-element">
@@ -85,7 +85,7 @@
                     <h3 class="fag-tittel">Foto og grafikk</h3>
                     <p class="fag-beskrivelse">Foto og grafikk er et praktisk fag der du kan lære mange forskjellige grafiske teknikker, og kan lage din egen kunst</p>
                     <p class="fag-sitat"></p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/foto_og_grafikk/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="../kda/programfag/foto_og_grafikk/">Se mer →</a>
                 </div>
                 <img src="../assets/imgs/foto_og_grafikk/tre_ansikt_kunst.jpg" class="fag-bilde">
             </div>
@@ -95,7 +95,7 @@
                     <h3 class="fag-tittel">Arkitektur og samfunn</h3>
                     <p class="fag-beskrivelse">Arkitektur og samfunn er et spennende praktisk fag der du lærer mye, blandt annet hvordan arkitektur, natur og samfunn gjensidig påvirker hverandre</p>
                     <p class="fag-sitat"></p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/arkitektur_og_samfunn/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="../kda/programfag/arkitektur_og_samfunn/">Se mer →</a>
                 </div>
             </div>
             <div class="fag-element">
@@ -103,7 +103,7 @@
                     <h3 class="fag-tittel">Design og bærekraft</h3>
                     <p class="fag-beskrivelse">I Design og bærekraft lærer du mye nyttig, blandt annet hvordan man bruker ulike materialer og teknikker i produktutvikling</p>
                     <p class="fag-sitat"></p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/design_og_bærekraft/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="../kda/programfag/design_og_bærekraft/">Se mer →</a>
                 </div>
                 <img src="../assets/imgs/design_og_bærekraft/redesign_bukser_og_vesker.jpg" class="fag-bilde">
             </div>
