--- a/kda/programfag/foto_og_grafikk/index.html
+++ b/kda/programfag/foto_og_grafikk/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../style/global.css">
-    <link rel="stylesheet" href="../../style/programfag.css">
-    <link rel="stylesheet" href="../../style/kda.css">
+    <link rel="stylesheet" href="../../../style/global.css">
+    <link rel="stylesheet" href="../../../style/programfag.css">
+    <link rel="stylesheet" href="../../../style/kda.css">
     <link rel="stylesheet" href="./foto_og_grafikk.css">
-    <link rel="icon" href="../../assets/icons/favicon.png" type="image/png">
+    <link rel="icon" href="../../../assets/icons/favicon.png" type="image/png">
     <title>Foto og grafikk</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
         <div id="forside-bilde">
             <h1>Foto og grafikk</h1>
             <!-- knapp tilbake til X -->
-            <a href="../../kda/" id="tilbake-knapp">&lt; Tilbake til KDA</a>
+            <a href="../../../kda/" id="tilbake-knapp">&lt; Tilbake til KDA</a>
         </div>
     </header>
     <main>
@@ -69,8 +69,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/foto_og_grafikk/tre-x-menneske.jpg" alt="tegnet gutt i rødt og svart med tre x-er under">
-                    <img src="../../assets/imgs/foto_og_grafikk/deprimerende-bursdag.jpg" alt="Deprimert jente bak kake med ett lys">
+                    <img src="../../../assets/imgs/foto_og_grafikk/tre-x-menneske.jpg" alt="tegnet gutt i rødt og svart med tre x-er under">
+                    <img src="../../../assets/imgs/foto_og_grafikk/deprimerende-bursdag.jpg" alt="Deprimert jente bak kake med ett lys">
                 </div>
                 <div class="elev-sitat">
                 </div>
@@ -88,7 +88,7 @@
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="../../script/footer.js"></script>
-    <script src="../../script/global.js"></script>
+    <script src="../../../script/footer.js"></script>
+    <script src="../../../script/global.js"></script>
 </body>
 </html>
