--- a/kda/programfag/arkitektur_og_samfunn/index.html
+++ b/kda/programfag/arkitektur_og_samfunn/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../style/global.css">
-    <link rel="stylesheet" href="../../style/programfag.css">
-    <link rel="stylesheet" href="../../style/kda.css">
+    <link rel="stylesheet" href="../../../style/global.css">
+    <link rel="stylesheet" href="../../../style/programfag.css">
+    <link rel="stylesheet" href="../../../style/kda.css">
     <link rel="stylesheet" href="./arkitektur_og_samfunn.css">
-    <link rel="icon" href="../../assets/icons/favicon.png" type="image/png">
+    <link rel="icon" href="../../../assets/icons/favicon.png" type="image/png">
     <title>Arkitektur og samfunn</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
         <div id="forside-bilde">
             <h1>Arkitektur og samfunn</h1>
             <!-- knapp tilbake til X -->
-            <a href="../../kda/" id="tilbake-knapp">&lt; Tilbake til KDA</a>
+            <a href="../../../kda/" id="tilbake-knapp">&lt; Tilbake til KDA</a>
         </div>
     </header>
     <main>
@@ -70,8 +70,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/arkitektur_og_samfunn/digital-skisse.jpg" alt="Digital skisse">
-                    <img src="../../assets/imgs/arkitektur_og_samfunn/traer-i-by.jpg" alt="Trær i by">
+                    <img src="../../../assets/imgs/arkitektur_og_samfunn/digital-skisse.jpg" alt="Digital skisse">
+                    <img src="../../../assets/imgs/arkitektur_og_samfunn/traer-i-by.jpg" alt="Trær i by">
                 </div>
                 <div class="elev-sitat">
                 </div>
@@ -88,7 +88,7 @@
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="../../script/footer.js"></script>
-    <script src="../../script/global.js"></script>
+    <script src="../../../script/footer.js"></script>
+    <script src="../../../script/global.js"></script>
 </body>
 </html>
