--- a/kda/programfag/design_og_bærekraft/index.html
+++ b/kda/programfag/design_og_bærekraft/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../style/global.css">
-    <link rel="stylesheet" href="../../style/programfag.css">
-    <link rel="stylesheet" href="../../style/kda.css">
+    <link rel="stylesheet" href="../../../style/global.css">
+    <link rel="stylesheet" href="../../../style/programfag.css">
+    <link rel="stylesheet" href="../../../style/kda.css">
     <link rel="stylesheet" href="./design_og_bærekraft.css">
-    <link rel="icon" href="../../assets/icons/favicon.png" type="image/png">
+    <link rel="icon" href="../../../assets/icons/favicon.png" type="image/png">
     <title>Design og bærekraft</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
         <div id="forside-bilde">
             <h1>Design og bærekraft</h1>
             <!-- knapp tilbake til X -->
-            <a href="../../kda/" id="tilbake-knapp">&lt; Tilbake til KDA</a>
+            <a href="../../../kda/" id="tilbake-knapp">&lt; Tilbake til KDA</a>
         </div>
     </header>
     <main>
@@ -73,8 +73,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/design_og_bærekraft/fargepaletter.jpg" alt="Fargepaletter">
-                    <img src="../../assets/imgs/design_og_bærekraft/liming-design.jpg" alt="Liming design">
+                    <img src="../../../assets/imgs/design_og_bærekraft/fargepaletter.jpg" alt="Fargepaletter">
+                    <img src="../../../assets/imgs/design_og_bærekraft/liming-design.jpg" alt="Liming design">
                 </div>
                 <div class="elev-sitat">
                 </div>
@@ -92,7 +92,7 @@
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="../../script/footer.js"></script>
-    <script src="../../script/global.js"></script>
+    <script src="../../../script/footer.js"></script>
+    <script src="../../../script/global.js"></script>
 </body>
 </html>
