--- a/kda/programfag/kunst_og_skapende_arbeid/index.html
+++ b/kda/programfag/kunst_og_skapende_arbeid/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../style/global.css">
-    <link rel="stylesheet" href="../../style/programfag.css">
-    <link rel="stylesheet" href="../../style/kda.css">
+    <link rel="stylesheet" href="../../../style/global.css">
+    <link rel="stylesheet" href="../../../style/programfag.css">
+    <link rel="stylesheet" href="../../../style/kda.css">
     <link rel="stylesheet" href="./kunst_og_skapende_arbeid.css">
-    <link rel="icon" href="../../assets/icons/favicon.png" type="image/png">
+    <link rel="icon" href="../../../assets/icons/favicon.png" type="image/png">
     <title>Kunst og skapende</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
         <div id="forside-bilde">
             <h1>Kunst og skapende</h1>
             <!-- knapp tilbake til X -->
-            <a href="../../kda/" id="tilbake-knapp">&lt; Tilbake til KDA</a>
+            <a href="../../../kda/" id="tilbake-knapp">&lt; Tilbake til KDA</a>
         </div>
     </header>
     <main>
@@ -71,8 +71,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/kunst_og_skapende/cafe-maleri.jpg" alt="Maleri av folk i cafe">
-                    <img src="../../assets/imgs/kunst_og_skapende/maleri-bold-jente.jpg" alt="Maleri av en blond jente">
+                    <img src="../../../assets/imgs/kunst_og_skapende/cafe-maleri.jpg" alt="Maleri av folk i cafe">
+                    <img src="../../../assets/imgs/kunst_og_skapende/maleri-bold-jente.jpg" alt="Maleri av en blond jente">
                 </div>
                 <div class="elev-sitat">
                 </div>
@@ -90,7 +90,7 @@
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="../../script/footer.js"></script>
-    <script src="../../script/global.js"></script>
+    <script src="../../../script/footer.js"></script>
+    <script src="../../../script/global.js"></script>
 </body>
 </html>
